--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 *::before,
 *::after
 {
-    transition: all 0.3s ease;
+    transition: background 0.3s ease color 0.3s ease border 0.3s ease;
 }
 
 body
