--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body
     background: rgba(255, 255, 255, 0.1);
     cursor: pointer;
     display: inline-block;
-    transition: all 0.3s ease;
+    transition: background 0.3s ease color 0.3s ease border 0.3s ease;
 }
 
 .contact a:hover
