--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 *::before,
 *::after
 {
-    transition: background 0.3s ease color 0.3s ease border 0.3s ease;
+    transition: background 0.3s ease, color 0.3s ease, border 0.3s ease;
 }
 
 body
@@ -82,7 +82,6 @@ body
     background: rgba(255, 255, 255, 0.1);
     cursor: pointer;
     display: inline-block;
-    transition: background 0.3s ease color 0.3s ease border 0.3s ease;
 }
 
 .contact a:hover
