--- a/style.css
+++ b/style.css
@@ -73,6 +73,26 @@ body
     margin-top: 10px;
 }
 
+[data-theme="dark"] a
+{
+    color: color-mix(in srgb, var(--primary-color) 40%, #ffffff 60%);
+}
+
+[data-theme="dark"] a:hover
+{
+    color: color-mix(in srgb, var(--primary-color) 70%, #ffffff 30%);
+}
+
+[data-theme="light"] a
+{
+    color: var(--primary-color);
+}
+
+[data-theme="light"] a:hover
+{
+    color: var(--primary-dark);
+}
+
 .contact a
 {
     color: white;
@@ -82,8 +102,9 @@ body
     background: rgba(255, 255, 255, 0.1);
     cursor: pointer;
     display: inline-block;
-    transition: all 0.3ms ease;
+    transition: transform 0.3s ease, background 0.3s ease, color 0.3s ease;
 }
+
 
 .contact a:hover
 {
@@ -146,6 +167,7 @@ li
     margin: 0 15px;
     color: var(--primary-dark);
     text-decoration: none;
+    transition: transform 0.3s ease;
 }
 
 .social-links a:hover
@@ -217,12 +239,13 @@ li
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 24px;
+    font-size: 2em;
     color: var(--primary-dark);
     padding: 10px;
     border-radius: 50%;
-    transition: all 0.3ms ease;
+    transition: transform 0.3s ease;
 }
+
 
 .theme-toggle:hover,
 .color-toggle:hover
@@ -234,21 +257,70 @@ li
 .color-popup
 {
     position: absolute;
+    display: grid;
     top: calc(100% + 5px);
-    right: 12px;
     background: white;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    display: none;
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
+    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
+    opacity: 0;
+    transform: translateY(-10px);
+    visibility: hidden;
+}
+
+.color-popup.show
+{
+    opacity: 1;
+    transform: translateY(0);
+    visibility: visible;
 }
 
 [data-theme="dark"] .color-popup
 {
     background: #2a2a2a;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+@media (min-width: 1000px)
+{
+    .color-popup
+    {
+        right: 12px;
+    }
+}
+
+@media (max-width: 1000px)
+{
+    .theme-controls
+    {
+        width: 100%;
+        position: fixed;
+        top: 20px;
+        left: 0px;
+        font-size: 3em;
+    }
+
+    .color-toggle
+    {
+        position: absolute;
+        left: 10px;
+    }
+
+    .theme-toggle
+    {
+        position: absolute;
+        right: 10px;
+    }
+
+    .color-popup
+    {
+        left: 2em;
+        top: 4em;
+        transform: scale(2);
+    }
 }
 
 .color-option
@@ -290,16 +362,6 @@ li
 {
     color: var(--primary-color);
     border-bottom-color: var(--primary-color);
-}
-
-[data-theme="dark"] a
-{
-    color: var(--primary-color);
-}
-
-[data-theme="light"] a
-{
-    color: var(--primary-color);
 }
 
 [data-theme="dark"] .social-links a
