--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ li
         position: fixed;
         top: 20px;
         left: 0px;
-        font-size: 3em;
+        font-size: 30px;
     }
 
     .color-toggle
@@ -330,18 +330,6 @@ li
         left: 2em;
         top: 4em;
         scale: 2;
-    }
-
-
-    .social-links
-    {
-        scale: 1.5;
-        transform: translateY(30%);
-    }
-
-    .header-container
-    {
-        margin-top: 4em;
     }
 }
 
