--- a/style.css
+++ b/style.css
@@ -294,23 +294,21 @@ li
 {
     position: absolute;
     display: grid;
-    top: calc(100% + 5px);
+    top: calc(100% + 1em);
     background: white;
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
-    transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
+    transition: opacity 0.3s ease, visibility 0.3s ease, translate 0.3s ease;
     opacity: 0;
-    transform: translateY(-10px);
     visibility: hidden;
 }
 
 .color-popup.show
 {
     opacity: 1;
-    transform: translateY(0);
     visibility: visible;
 }
 
@@ -326,10 +324,20 @@ li
     {
         right: calc(0.5em + 10px);
     }
+
+    .color-popup.show
+    {
+        translate: 0 -0.5em;
+    }
 }
 
 @media (max-width: 1000px)
 {
+    .color-popup.show
+    {
+        translate: 0 0.2em;
+    }
+
     .theme-controls
     {
         width: 100%;
@@ -353,9 +361,10 @@ li
 
     .color-popup
     {
-        left: 2em;
-        top: 5em;
+        left: 0.5em;
+        top: 2.5em;
         transform: scale(2);
+        transform-origin: left top;
         z-index: 999999;
     }
 
