--- a/style.css
+++ b/style.css
@@ -343,6 +343,27 @@ li
 
 @media (max-width: 1000px)
 {
+    .social-links
+    {
+        padding: 40px 0;
+        margin-top: 50px;
+    }
+
+    .social-links a
+    {
+        margin: 0 30px;
+    }
+
+    .social-links i
+    {
+        font-size: 48px;
+    }
+
+    .social-links .social-text
+    {
+        font-size: 24px;
+    }
+
     .color-popup.show
     {
         translate: 0 0.2em;
